# discord-bot

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
gr_datetime/: gr_date.py  gr_numbers.py
help/: help.py
pronunciation/: forvo.py  pronunciation.py  wiktionary.py
src/: main.py  rbot.py  utils.py
src/faq/: faqlist_message.py  lt_message.py
src/gr_datetime/: gr_date.py  gr_numbers.py
src/help/: help.py
src/languagetransfer/: embed_message.py
src/pronunciation/: forvo.py  pronunciation.py
src/rafasfaq/: faqlist_message.py  lt_message.py
src/wiktionary/: embed_message.py  wiktionary.py  wiktionaryel.py
src/wordlookup/: embed_message.py  test_wiktionary.py  wiktionaryel.py
src/wordref/: entry.py  longest.py  wordref.py
tests/: test_date.py  test_longest.py  test_pronunciation.py  test_wiktionary.py  test_wordref.py
wordref/: entry.py  greeklish.py  longest.py  wordref.py
